<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.basickorverbs.MainActivity">
    <item
        android:id="@+id/action_test_antonyms"
        android:orderInCategory="100"
        android:title="@string/action_test_antonyms"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_test_examples"
        android:orderInCategory="100"
        android:title="@string/action_test_examples"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="100"
        android:title="@string/about_fragment_label"
        app:showAsAction="never" />

</menu>