<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.basickorverbs.firstScreen.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.basickorverbs.secondScreen.SecondFragment"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.basickorverbs.thirdScreen.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

    </fragment>

    <fragment
        android:id="@+id/trainingFragment"
        android:name="com.example.basickorverbs.antonymsTestScreen.AntonymsTestFragment"
        android:label="@string/antonyms_test_fragment_label"
        tools:layout="@layout/fragment_antonym_training">
        <action
            android:id="@+id/action_test_antonyms_to_SecondFragment"
            app:destination="@+id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/exampleTrainingFragment"
        android:name="com.example.basickorverbs.examplesTrainingScreen.ExampleTrainingFragment"
        android:label="@string/examples_test_fragment_label"
        tools:layout="@layout/fragment_example_training" />

    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.basickorverbs.AboutScreen.AboutFragment"
        android:label="@string/about_fragment_label"
        tools:layout="@layout/fragment_about" />


</navigation>